--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,7 @@ pytest = "*"
 django = "*"
 djangorestframework = "*"
 django-cors-headers = "*"
+pytest-django = "*"
 
 [dev-packages]
 ipython = "*"
