--- a/poker_frontend/package.json
+++ b/poker_frontend/package.json
@@ -3,6 +3,11 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@emotion/react": "^11.10.8",
+        "@emotion/styled": "^11.10.8",
+        "@fontsource/roboto": "^4.5.8",
+        "@mui/material": "^5.12.2",
+        "@mui/styled-engine-sc": "^5.12.0",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
         "axios": "^1.3.4",
@@ -10,6 +15,7 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-scripts": "^2.1.3",
+        "styled-components": "^5.3.10",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
