--- a/poker_backend/Pipfile
+++ b/poker_backend/Pipfile
@@ -9,6 +9,7 @@ django = "*"
 djangorestframework = "*"
 django-cors-headers = "*"
 pytest-django = "*"
+poker-ai = "*"
 
 [dev-packages]
 ipython = "*"
