--- a/poker_frontend/package.json
+++ b/poker_frontend/package.json
@@ -16,6 +16,7 @@
         "react-dom": "^18.2.0",
         "react-scripts": "^2.1.3",
         "styled-components": "^5.3.10",
+        "uuid": "^9.0.0",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
