--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -9,7 +9,7 @@ django = "*"
 djangorestframework = "*"
 django-cors-headers = "*"
 pytest-django = "*"
-poker-ai = "*"
+psycopg2-binary = "*"
 
 [dev-packages]
 ipython = "*"
@@ -19,4 +19,4 @@ prospector = "*"
 yapf = "*"
 
 [requires]
-python_version = "3.7"
+python_version = "3.8"
