--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -10,6 +10,8 @@ djangorestframework = "*"
 django-cors-headers = "*"
 pytest-django = "*"
 psycopg2-binary = "*"
+google-auth = "*"
+requests = "*"
 
 [dev-packages]
 ipython = "*"
