--- a/player_client/package.json
+++ b/player_client/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.10.8",
     "@emotion/styled": "^11.10.8",
     "@fontsource/roboto": "^4.5.8",
+    "@mui/icons-material": "^5.14.1",
     "@mui/material": "^5.12.2",
     "@mui/styled-engine-sc": "^5.12.0",
     "@react-oauth/google": "^0.11.0",
@@ -15,6 +16,7 @@
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.14.2",
     "react-scripts": "^2.1.3",
     "styled-components": "^5.3.10",
     "uuid": "^9.0.0",
